Wed Apr 16 14:40:16 UTC 2008  Brian Johnson  <johnson_b@ociweb.com>

        * MPC/config/coverage_optional.mpb:

          Added to turn on coverage feature.  RT#12130

        * MPC/config/dcps.mpb:
        * dds/DdsDcps.mpc:

          Added inheritance of coverage_optional.mpb.

Wed Apr 16 14:20:40 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/run_corbaloc_test.pl:
        * DevGuideExamples/DCPS/Messenger/run_ns_test.pl:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/run_test.pl:
        * bin/auto_run_tests.pl:
        * examples/DCPS/DistributedContent/run_test.pl:
        * examples/DCPS/Messenger_IOGR_Imr/run_test.pl:
        * examples/DCPS/Messenger_Imr/run_test.pl:
        * performance-tests/DCPS/InfoRepo_population/run_test.pl:
        * performance-tests/DCPS/McastListenerTest/run_test-1p1s.pl:
        * performance-tests/DCPS/McastListenerTest/run_test-1p4s.pl:
        * performance-tests/DCPS/McastListenerTest/run_test-2p3s.pl:
        * performance-tests/DCPS/McastListenerTest/run_test-4p1s.pl:
        * performance-tests/DCPS/SimpleE2ETest/run_test.pl:
        * performance-tests/DCPS/SimpleE2ETest/run_test_long.pl:
        * performance-tests/DCPS/SimpleE2ETest/run_test_rejected.pl:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/run_test_1x1.pl:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/split_pub.pl:
        * performance-tests/DCPS/SimpleLatency/run_test.pl:
        * performance-tests/DCPS/TCPListenerTest/run_test-1p4s.pl:
        * performance-tests/DCPS/TCPListenerTest/run_test-2p3s.pl:
        * performance-tests/DCPS/TCPListenerTest/run_test-4p1s.pl:
        * performance-tests/DCPS/TCPProfilingTest/raw_tcp/run_test_1x1.pl:
        * performance-tests/DCPS/TCPProfilingTest/raw_tcp/run_test_1xn.pl:
        * performance-tests/DCPS/TCPProfilingTest/raw_tcp/run_test_nx1.pl:
        * performance-tests/DCPS/TCPProfilingTest/raw_tcp/run_test_nxn.pl: